// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch-ipfs fetchIPFS 1`] = `
Object {
  "data": Array [
    72,
    101,
    108,
    108,
    111,
    32,
    102,
    114,
    111,
    109,
    32,
    73,
    80,
    70,
    83,
    32,
    71,
    97,
    116,
    101,
    119,
    97,
    121,
    32,
    67,
    104,
    101,
    99,
    107,
    101,
    114,
    10,
  ],
  "type": "Buffer",
}
`;

exports[`fetch-ipfs handleClientList 1`] = `
Object {
  "commit": "1f0de1aaf",
  "golang": "go1.12.13",
  "repo": "7",
  "system": "amd64/linux",
  "version": "0.4.23",
}
`;

exports[`fetch-ipfs publishToIPFSRace 1`] = `
Array [
  Object {
    "status": "fulfilled",
    "value": Array [
      Object {
        "cid": Object {
          "codec": "dag-pb",
          "hash": Object {
            "data": Array [
              18,
              32,
              223,
              132,
              95,
              120,
              239,
              37,
              73,
              105,
              194,
              216,
              47,
              210,
              17,
              220,
              60,
              70,
              37,
              120,
              237,
              137,
              129,
              233,
              243,
              67,
              167,
              8,
              53,
              32,
              216,
              26,
              53,
              116,
            ],
            "type": "Buffer",
          },
          "version": 0,
        },
        "path": "QmdPAhQRxrDKqkGPvQzBvjYe3kU8kiEEAd2J6ETEamKAD9",
        "size": 98748,
      },
    ],
  },
]
`;

exports[`fetch-ipfs publishToIPFSRace 2`] = `
Object {
  "cid": Object {
    "codec": "dag-pb",
    "hash": Object {
      "data": Array [
        18,
        32,
        223,
        132,
        95,
        120,
        239,
        37,
        73,
        105,
        194,
        216,
        47,
        210,
        17,
        220,
        60,
        70,
        37,
        120,
        237,
        137,
        129,
        233,
        243,
        67,
        167,
        8,
        53,
        32,
        216,
        26,
        53,
        116,
      ],
      "type": "Buffer",
    },
    "version": 0,
  },
  "path": "QmdPAhQRxrDKqkGPvQzBvjYe3kU8kiEEAd2J6ETEamKAD9",
  "size": 98748,
}
`;

exports[`fetch-ipfs raceFetchIPFS 1`] = `
Object {
  "data": Array [
    72,
    101,
    108,
    108,
    111,
    32,
    102,
    114,
    111,
    109,
    32,
    73,
    80,
    70,
    83,
    32,
    71,
    97,
    116,
    101,
    119,
    97,
    121,
    32,
    67,
    104,
    101,
    99,
    107,
    101,
    114,
    10,
  ],
  "type": "Buffer",
}
`;
